human arc changes

--- a/scss/layouts/_work.scss
+++ b/scss/layouts/_work.scss
@@ -130,6 +130,10 @@
     }
 }
 
+.timeline-badge.human-color {
+    background-color: #003d71 !important;
+}
+
 .timeline-badge.q2-color {
     background-color: #00cc00 !important;
 }
